syntax = "proto3";
package snapchat.cdp.cof;
option optimize_for = CODE_SIZE;
option csharp_namespace = "SnapProto.Snapchat.Cdp.Cof";

message PartialToken {
    repeated int32 sequenceIdsArray = 1;
}