syntax = "proto3";
package snapchat.cdp.cof;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCCof";
option csharp_namespace = "SnapProto.Snapchat.Cdp.Cof";

import "snapchat/cdp/cof/Benchmark.proto";
import "snapchat/cdp/cof/ConfigResult.proto";

message SCCofConfigTargetingResponse {
    repeated .snapchat.cdp.cof.ConfigResult configResultsArray = 1;
    string configResultsEtag = 2;
    .snapchat.cdp.cof.BenchmarkRequest benchmarkRequest = 3;
    bool fullResults = 4;
    int32 abResultChecksum = 5;
    string iso3166Alpha2CountryCodeFromRequestIp = 6;
    .snapchat.cdp.cof.SCCofConfigTargetingResponseDebugData debugData = 7;
}

message SCCofConfigTargetingResponseDebugData {
    string abResultChecksumInput = 1;
}