syntax = "proto3";
package snapchat.janus.api;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCJanus";
option csharp_namespace = "SnapProto.Snapchat.Janus.Api";

import "com/snapchat/proto/snaptoken/SCPBSnaptokenNetworkTokens.proto";
import "google/protobuf/timestamp.proto";
import "snapchat/core/SCCOREUuid.proto";

message SCJanusBootstrapData {
    .snapchat.janus.api.SCJanusUserSession userSession = 1;
    bytes coreUserData = 2;
    bytes sup = 3;
    bytes cof = 4;
    .snapchat.janus.api.SCJanusFideliusIdentity fideliusIdentity = 5;
    .snapchat.janus.api.SCJanusUserState userState = 6;
    .snapchat.janus.api.SCJanusSecurityData securityData = 7;
    .snapchat.janus.api.SCJanusFriendData friendData = 8;
    .snapchat.janus.api.SCJanusCofSyncMechanism cofSyncMechanism = 9;
}

message SCJanusCofSyncMechanism {
    .snapchat.janus.api.SCJanusCofSyncMechanism.SCJanusCofSyncMechanism_TriggerType triggerType = 1;
    enum SCJanusCofSyncMechanism_TriggerType {
        SCJanusCofSyncMechanism_TriggerType_Unset = 0;
        SCJanusCofSyncMechanism_TriggerType_RegisterPasswordPageSuccess = 1;
    }
}

message SCJanusDeviceTokenResponse {
    string id_p = 1;
    string value = 2;
}

message SCJanusFideliusIdentity {
    bytes iwek = 1;
    bytes hashedPublicKey = 2;
}

message SCJanusFriendData {
    repeated .snapchat.janus.api.SCJanusFriendLink friendLinksArray = 1;
    repeated .snapchat.core.SCCOREUUID bestFriendsArray = 2;
}

message SCJanusFriendLink {
    string mutableUsername = 1;
    .snapchat.core.SCCOREUUID userId = 2;
    .snapchat.janus.api.SCJanusFriendLink.SCJanusFriendLink_ConnectionType connectionType = 3;
    string displayName = 4;
    uint64 addedTs = 5;
    uint64 reverseAddedTs = 6;
    bool muted = 7;
    string legacyUsername = 8;
    enum SCJanusFriendLink_ConnectionType {
        SCJanusFriendLink_ConnectionType_UnknownUnset = 0;
        SCJanusFriendLink_ConnectionType_Friend = 1;
        SCJanusFriendLink_ConnectionType_Pending = 2;
        SCJanusFriendLink_ConnectionType_Following = 3;
        SCJanusFriendLink_ConnectionType_Blocked = 4;
        SCJanusFriendLink_ConnectionType_Deleted = 5;
    }
}

message SCJanusSecurityData {
    .snapchat.janus.api.SCJanusDeviceTokenResponse deviceToken = 1;
    bool twoFaSmsEnabled = 2;
    bool twoFaOtpEnabled = 3;
    .snapchat.janus.api.SCJanusSecurityData.SCJanusSecurityData_AccountSafetyAction accountSafetyAction = 4;
    enum SCJanusSecurityData_AccountSafetyAction {
        SCJanusSecurityData_AccountSafetyAction_AccountSafetyActionUnset = 0;
        SCJanusSecurityData_AccountSafetyAction_AccountSafetyActionChangePasswordTakeover = 1;
    }
}

message SCJanusTOSAcceptance {
    bool tos9 = 1;
    bool tos9And10 = 2;
    bool tos10 = 3;
    bool tos9And11 = 4;
    bool tos11 = 5;
    bool tos12 = 6;
}

message SCJanusUserSession {
    string userId = 1;
    string mutableUsername = 2;
    string snapadsId = 3;
    string lagunaId = 4;
    string authToken = 5;
    .com.snapchat.proto.snaptoken.SCPBSnaptokenSnapSessionResponse snapSessionResponse = 6;
}

message SCJanusUserState {
    .snapchat.janus.api.SCJanusVerificationStatus verificationStatus = 1;
    .snapchat.janus.api.SCJanusTOSAcceptance tosAcceptance = 2;
    .google.protobuf.Timestamp previousActiveTimestamp = 3;
}

message SCJanusVerificationStatus {
    bool registrationVerified = 1;
    .snapchat.janus.api.SCJanusVerificationStatus.SCJanusVerificationStatus_VerificationMethod preferredVerificationMethod = 2;
    enum SCJanusVerificationStatus_VerificationMethod {
        SCJanusVerificationStatus_VerificationMethod_Unset = 0;
        SCJanusVerificationStatus_VerificationMethod_PhoneFirstEmailBypassed = 1;
        SCJanusVerificationStatus_VerificationMethod_PhoneFirstEmailSkippable = 2;
        SCJanusVerificationStatus_VerificationMethod_EmailFirstPhoneBypassed = 3;
        SCJanusVerificationStatus_VerificationMethod_EmailFirstPhoneSkippable = 4;
        SCJanusVerificationStatus_VerificationMethod_EmailOnly = 5;
        SCJanusVerificationStatus_VerificationMethod_PhoneOnly = 6;
    }
}