syntax = "proto3";
package snapchat.janus.api;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCJanus";
option csharp_namespace = "SnapProto.Snapchat.Janus.Api";

import "snapchat/janus/api/SCJanusLoginBootstrap.proto";
import "snapchat/janus/api/SCJanusLoginCommon.proto";

message SCJanusSendODLVCodeData {
}

message SCJanusSendODLVCodeRequest {
    string odlvToken = 1;
    .snapchat.janus.api.SCJanusSendODLVCodeRequest.SCJanusODLVType odlvType = 2;
    .snapchat.janus.api.SCJanusLoginHeader loginHeader = 15;
    enum SCJanusODLVType {
        SCJanusODLVType_OdlvTypeUnset = 0;
        SCJanusODLVType_OdlvTypeSms = 1;
        SCJanusODLVType_OdlvTypeEmail = 2;
    }
}

message SCJanusSendODLVCodeResponse {
    .snapchat.janus.api.SCJanusSendODLVCodeResponse.SCJanusSendODLVCodeResponse_StatusCode statusCode = 1;
    .snapchat.janus.api.SCJanusSendODLVCodeData sendOdlvData = 2;
    .snapchat.janus.api.SCJanusAndroidSafetynetData androidSafetynetData = 3;
    .snapchat.janus.api.SCJanusErrorData errorData = 10;
    enum SCJanusSendODLVCodeResponse_StatusCode {
        SCJanusSendODLVCodeResponse_StatusCode_Unset = 0;
        SCJanusSendODLVCodeResponse_StatusCode_SendSuccess = 1;
        SCJanusSendODLVCodeResponse_StatusCode_AndroidSafetynetRequested = 2;
        SCJanusSendODLVCodeResponse_StatusCode_ErrGenericFailure = 10;
        SCJanusSendODLVCodeResponse_StatusCode_ErrThrottled = 11;
        SCJanusSendODLVCodeResponse_StatusCode_ErrInvalidToken = 12;
        SCJanusSendODLVCodeResponse_StatusCode_ErrSendFailureRetryable = 13;
        SCJanusSendODLVCodeResponse_StatusCode_ErrSendFailureUnretryable = 14;
        SCJanusSendODLVCodeResponse_StatusCode_ErrAppVersionUpgrade = 15;
        SCJanusSendODLVCodeResponse_StatusCode_ErrBlocked = 16;
    }
}

message SCJanusVerifyODLVRequest {
    string odlvToken = 1;
    string odlvCode = 2;
    .snapchat.janus.api.SCJanusVerifyODLVRequest.SCJanusODLVType odlvType = 3;
    .snapchat.janus.api.SCJanusFideliusClientInit fideliusClientInit = 4;
    .snapchat.janus.api.SCJanusCofTags cofTags = 5;
    .snapchat.janus.api.SCJanusLoginHeader loginHeader = 15;
    enum SCJanusODLVType {
        SCJanusODLVType_OdlvTypeUnset = 0;
        SCJanusODLVType_OdlvTypeSms = 1;
        SCJanusODLVType_OdlvTypeEmail = 2;
    }
}

message SCJanusVerifyODLVResponse {
    .snapchat.janus.api.SCJanusVerifyODLVResponse.SCJanusVerifyODLVResponse_StatusCode statusCode = 1;
    .snapchat.janus.api.SCJanusBootstrapData bootstrapData = 2;
    .snapchat.janus.api.SCJanusAndroidSafetynetData androidSafetynetData = 3;
    .snapchat.janus.api.SCJanusErrorData errorData = 10;
    enum SCJanusVerifyODLVResponse_StatusCode {
        SCJanusVerifyODLVResponse_StatusCode_Unset = 0;
        SCJanusVerifyODLVResponse_StatusCode_VerifySuccess = 1;
        SCJanusVerifyODLVResponse_StatusCode_AndroidSafetynetRequested = 2;
        SCJanusVerifyODLVResponse_StatusCode_ErrGenericFailure = 10;
        SCJanusVerifyODLVResponse_StatusCode_ErrThrottled = 11;
        SCJanusVerifyODLVResponse_StatusCode_ErrInvalidToken = 12;
        SCJanusVerifyODLVResponse_StatusCode_ErrCodeMismatch = 13;
        SCJanusVerifyODLVResponse_StatusCode_ErrAppVersionUpgrade = 14;
        SCJanusVerifyODLVResponse_StatusCode_ErrBlocked = 15;
    }
}