syntax = "proto3";
package snapchat.janus.api;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCJanus";
option csharp_namespace = "SnapProto.Snapchat.Janus.Api";

import "snapchat/janus/api/SCJanusLoginBootstrap.proto";
import "snapchat/janus/api/SCJanusLoginCommon.proto";

message SCJanusLoginWithPasswordRequest {
    string password = 4;
    uint32 loginAttemptNumber = 5;
    .snapchat.janus.api.SCJanusFideliusClientInit fideliusClientInit = 7;
    .snapchat.janus.api.SCJanusCofTags cofTags = 8;
    .snapchat.janus.api.SCJanusLoginHeader loginHeader = 15;
    string username = 1;
    string email = 2;
    string phoneNumber = 3;
}

message SCJanusLoginWithPasswordResponse {
    .snapchat.janus.api.SCJanusLoginWithPasswordResponse.SCJanusLoginWithPasswordResponse_StatusCode statusCode = 1;
    .snapchat.janus.api.SCJanusBootstrapData bootstrapData = 2;
    .snapchat.janus.api.SCJanusTwoFAData twoFaData = 3;
    .snapchat.janus.api.SCJanusODLVData odlvData = 4;
    .snapchat.janus.api.SCJanusLoginCodeData loginCodeData = 5;
    .snapchat.janus.api.SCJanusAccountDeactivationData accountDeactivationData = 6;
    .snapchat.janus.api.SCJanusAccountLockedData accountLockedData = 7;
    .snapchat.janus.api.SCJanusAndroidSafetynetData androidSafetynetData = 8;
    .snapchat.janus.api.SCJanusChannelVerificationData channelVerificationData = 9;
    .snapchat.janus.api.SCJanusErrorData errorData = 11;
    enum SCJanusLoginWithPasswordResponse_StatusCode {
        SCJanusLoginWithPasswordResponse_StatusCode_Unset = 0;
        SCJanusLoginWithPasswordResponse_StatusCode_LoginSuccess = 1;
        SCJanusLoginWithPasswordResponse_StatusCode_TwoFaRequired = 2;
        SCJanusLoginWithPasswordResponse_StatusCode_OdlvRequired = 3;
        SCJanusLoginWithPasswordResponse_StatusCode_LoginCodeSent = 4;
        SCJanusLoginWithPasswordResponse_StatusCode_AccountDeactivated = 5;
        SCJanusLoginWithPasswordResponse_StatusCode_AccountLocked = 6;
        SCJanusLoginWithPasswordResponse_StatusCode_AndroidSafetynetRequested = 7;
        SCJanusLoginWithPasswordResponse_StatusCode_ChannelVerificationRequired = 8;
        SCJanusLoginWithPasswordResponse_StatusCode_ErrGenericFailure = 10;
        SCJanusLoginWithPasswordResponse_StatusCode_ErrThrottled = 11;
        SCJanusLoginWithPasswordResponse_StatusCode_ErrCredentialMismatch = 12;
        SCJanusLoginWithPasswordResponse_StatusCode_ErrAccountNotFound = 13;
        SCJanusLoginWithPasswordResponse_StatusCode_ErrPasswordMismatch = 14;
        SCJanusLoginWithPasswordResponse_StatusCode_ErrAppVersionUpgrade = 15;
        SCJanusLoginWithPasswordResponse_StatusCode_ErrBlocked = 16;
    }
}